--- a/config/locales/kaminari_ja.yml
+++ b/config/locales/kaminari_ja.yml
@@ -6,3 +6,14 @@ ja:
       previous: "&lsaquo; 前"
       next: "次 &rsaquo;"
       truncate: "..."
+
+
+
+# ja:
+#   views:
+#     pagination:
+#       first: <i class="fas fa-angle-double-left"></i>
+#       last: <i class="fas fa-angle-double-right"></i>
+#       previous: <i class="fas fa-angle-left"></i>
+#       next: <i class="fas fa-angle-right"></i>
+#       truncate: "..."
